--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,37 +7,39 @@ on:
     branches: ['*']
 
 jobs:
-    test_python_38:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@v2
-        - name: Set up Python 3.8
-          uses: actions/setup-python@v2
-          with:
-            python-version: 3.8
-        - name: Install expect
-          run: sudo apt-get update && sudo apt-get install -y expect
-        - name: install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        - name: run doctests
-          run: |
-            python3.11 -m doctest Arithmetic.py
-    test_python_39:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@v2
-        - name: Set up Python 3.8
-          uses: actions/setup-python@v2
-          with:
-            python-version: 3.9
-        - name: Install expect
-          run: sudo apt-get update && sudo apt-get install -y expect
-        - name: install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        - name: run doctests
-          run: |
-            python3.11 -m doctest Arithmetic.py
+  test_python_38:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install expect
+        run: sudo apt-get update && sudo apt-get install -y expect
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Run doctests
+        run: |
+          python -m doctest Arithmetic.py
+
+  test_python_39:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install expect
+        run: sudo apt-get update && sudo apt-get install -y expect
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Run doctests
+        run: |
+          python -m doctest Arithmetic.py
+
